[tool.poetry]
name = "inteligencja2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygad = "^3.3.1"
colorama = "^0.4.6"
matplotlib = "^3.9.0"
pyqt6 = "^6.7.0"
pandas = "^2.2.2"
pyswarms = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
